Fixed bugs, added new favicon, fixed hamburger bugs and removed excess spacing on landing page

--- a/app/insights/employer-branding/employer-branding.module.css
+++ b/app/insights/employer-branding/employer-branding.module.css
@@ -591,7 +591,16 @@
   margin-left: clamp(110px, 6vw, 110px);
 }
 
-.footerNav a {
+.footerNav button.footerNavInsights {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.footerNav a,
+.footerNav button.footerNavInsights {
   display: inline-flex;
   width: fit-content;
   justify-self: start;
@@ -602,7 +611,8 @@
   position: relative;
 }
 
-.footerNav a::after {
+.footerNav a::after,
+.footerNav button.footerNavInsights::after {
   content: "";
   position: absolute;
   left: 0;
@@ -614,7 +624,8 @@
   transition: opacity 200ms ease-out;
 }
 
-.footerNav a:hover::after {
+.footerNav a:hover::after,
+.footerNav button.footerNavInsights:hover::after {
   opacity: 1;
 }
 
@@ -1142,7 +1153,8 @@
     width: 100%;
   }
 
-  .footerNav a {
+  .footerNav a,
+  .footerNav button.footerNavInsights {
     font-size: 16px;
     white-space: normal;
     text-align: center;
